--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -15,7 +15,7 @@
     "@iconify-json/logos": "^1.2.4",
     "@iconify-json/lucide": "^1.2.24",
     "@iconify/tailwind": "^1.2.0",
-    "@sveltejs/adapter-auto": "^4.0.0",
+    "@sveltejs/adapter-vercel": "^5.5.3",
     "@sveltejs/kit": "^2.16.1",
     "@sveltejs/vite-plugin-svelte": "^5.0.1",
     "@tailwindcss/postcss": "^4.0.0",
